11712406-project2/test/test_11712406_5.out
Error type 8 at Line 4: incompatible return type