11712406-project2/test/test_11712406_5.spl
int main() {
    int a, b, c;
    int d =(a = (b = (c = 1)));    
    return 1.2;
}